# ntou-cg-hw5

./: .gitignore  CMakeLists.txt
include/: define.h
src/: main.cpp
